@@ -9,6 +9,8 @@ Changelog
   added the ``--check-duplicate`` option
 - Application specific user agent header (configurable
   through ``--user-agent`` option)
+- The ``--directory`` option can be a path and so create
+  intermediate directories
 
 0.1 (2013-01-05)
 ----------------
